# SNN

./: .gitignore  CMakeLists.txt  Connect.ipynb  README.md  SNN.ipynb  Visualization.ipynb  output.csv
include/: brain.h  brain_builder.h  collections.h  cppn.h  neuron.h  simulation.h  snake_brain.h  snake_encoder.h  snake_env.h  snake_reward.h  synapse.h  tournament.h  tournament_recorder.h  util.h  weight.h
include/compute/: compute.h  compute_ops.h  cpu.h  cuda.h  views.h
src/: brain.cpp  brain_builder.cpp  collections.cpp  cppn.cpp  cuda_kernel.cu  main.cpp  neuron.cpp  simulation.cpp  snake_brain.cpp  snake_encoder.cpp  snake_env.cpp  snake_reward.cpp  synapse.cpp  tournament.cpp  tournament_recorder.cpp  util.cpp  weight.cpp
src/compute/: brain_cuda.cu  compute_ops.cpp  cpu.cpp  cuda.cu
